<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlleNeune</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="login_text">Log In</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="join_club_text">Join Club</string>
    <string name="create_club_text">Create Club</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="password_confirmation_hint">Confirm Password</string>
    <string name="title_activity_phone_number">PhoneNumberActivity</string>
    <string name="phone_number_explanation">We have to verify your phone number, so that you can later add your contacts to your clubs</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="sign_up_continue_text">Continue</string>
    <string name="title_activity_create_club">CreateClubActivity</string>
    <string name="club_name_label">Choose a name for your club here. In the next step you can add your friends to join.</string>
    <string name="add_friends_button">Add friends</string>
    <string name="club_name_hint">Clubname</string>
    <string name="validation_failed_title">Validation failed</string>
    <string name="title_activity_add_friends">AddFriendsActivity</string>
    <string name="add_selected_friends">Add selected friends</string>
    <string name="title_activity_club_home">ClubHomeActivity</string>
    <string name="menu_logout_label">Logout</string>
    <string name="edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>
    <string name="create_event_button">Create Event</string>

    <string-array name="menu">
        <item>Delete</item>
    </string-array>

    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="send_event_invites_to_members">Send invites to all members!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_event_date_hint">Click to set a date for this event!</string>
    <string name="set_event_time_hint">Click to set a time for this event!</string>
    <string name="set_event_name_hint">Set a name for this event!</string>
    <string name="event_created_toast">"Your event was created and invitations were sent to all members"</string>
    <string name="create_event_activity_title">Create Event</string>
    <string name="title_activity_show_event">ShowEventActivity</string>
    <string name="participants_text_view">Participants</string>
    <string name="wrong_user_credentials_warning">Wrong Username or Password!</string>
    <string name="bad_request_warning">Something went wrong here. We are Sorry!</string>
    <string name="phone_number_exists_warning">This phone number already exists!</string>
    <string name="user_and_email_exist_warning">Username and Email already in use. Please choose another one</string>
    <string name="user_name_exist_warning">This Username is already in use. Please choose another one!</string>
    <string name="email_exist_warning">This Email is already used. Please choose another one!</string>
    <string name="club_name_exist_warning">This Clubname is already in use. Please choose another one!</string>
    <string name="club_does_not_exist_warning">This Club does not exist</string>
    <string name="general_error">An error occurred on our end. Please try again</string>
    <string name="events">Events</string>
    <string name="drinks">Drinks</string>
    <string name="fines">Fines</string>
    <string name="title_activity_drink">DrinkActivity</string>
    <string name="create_drink">Create Drink</string>
    <string name="update_drink">Update Drink</string>
    <string name="title_activity_create_drink">CreateDrinkActivity</string>
    <string name="event_price_hint">Price</string>
    <string name="event_name_hint">Name</string>
    <string name="euro_sign">€</string>
    <string name="create_button">Create</string>
    <string name="drink_used_warning">This drink already exists. Please choose another name!</string>
    <string name="update_fine">Update Fine</string>
    <string name="create_fine">Create Fine</string>
    <string name="fine_used_warning">This fine already exists. Please choose another name!</string>
    <string name="title_activity_fine">FineActivity</string>
    <string name="event_amount_hint">Amount</string>
    <string name="no_fine_updates_message">You did not change this fine. No updates saved!</string>
    <string name="no_drink_updates_message">You did not change this drink. No updates saved!</string>
    <string name="add_drink_payment_button">Add Drink</string>
    <string name="add_drink_to_user">Add Drink to User</string>
    <string name="add_fine_payment_button">Add Fine</string>
    <string name="add_fine_to_user">Add fine to user</string>
    <string name="title_activity_show_payments">ShowPaymentsActivity</string>
    <string name="drink_tab_name">Drinks</string>
    <string name="fine_tab_name">Fines</string>
    <string name="total_text_view">Total</string>
</resources>
