<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="patrickengelkes.com.alleneune.activities.ClubHomeActivity">

    <item
        android:id="@+id/events_action"
        android:icon="@drawable/event_icon"
        android:showAsAction="ifRoom"
        android:title="@string/events" />

    <item
        android:id="@+id/drinks_action"
        android:icon="@drawable/drink_icon"
        android:showAsAction="ifRoom"
        android:title="@string/drinks" />

    <item
        android:id="@+id/fines_action"
        android:icon="@drawable/fine_icon"
        android:showAsAction="ifRoom"
        android:title="@string/fines" />

    <item
        android:id="@+id/edit_friends_action"
        android:showAsAction="never"
        android:title="@string/edit_friends_label" />

    <item
        android:id="@+id/logout_action"
        android:showAsAction="never"
        android:title="@string/menu_logout_label" />
</menu>
