<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="patrickengelkes.com.alleneune.activities.CreateDrinkActivity">


    <EditText
        android:id="@+id/drink_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:hint="@string/event_name_hint" />

    <EditText
        android:id="@+id/drink_price_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/drink_name_edit_text"
        android:layout_toLeftOf="@+id/editText"
        android:layout_toStartOf="@+id/editText"
        android:ems="10"
        android:gravity="end"
        android:hint="@string/event_price_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/drink_price_edit_text"
        android:text="@string/euro_sign" />

    <Button
        android:id="@+id/create_drink_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/drink_price_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:text="@string/create_button" />
</RelativeLayout>
